# ambience-expenseflow

./: .gitignore  Ambience_ExpenseFlow_Portfolio_Summary.md  CHANGELOG.md  Day5_Final_Completion_Report.md  EVALUATION_SHOWCASE.md  MCP_INTEGRATION.md  MULTI_AGENT_DESIGN.md  PROJECT_OVERVIEW.md  ProjectTree.txt  README.md  agents-cli-manifest.yaml  analyze_collections.py  backfill_database.py  check_bindings.py  deployment_metadata.json  list_recent_expenses.py  preview_backfill.py  publish_alice_250.py  publish_amount_test.py  publish_fresh_manager_test.py  publish_office_parking_tests.py  publish_per_diem_claims.py  publish_policy_tests.py  publish_receipt_test.py  publish_test.py  publish_upload_tests.py  publish_verification_claims.py  pyproject.toml  run_all_tests.py  run_verbose_150.py  seed_per_diem_policies.py  test_phase2_e2e.py  trigger_bindings.py  trigger_per_diem_bindings.py  verify_fresh_claims.py  verify_legacy_records.py  verify_per_diem_claims.py  verify_uploads_e2e.py
submission_frontend/: Dockerfile  main.py  pyproject.toml
submission_frontend/config/: settings.py
submission_frontend/middleware/: auth.py
submission_frontend/routes/: api_routes.py  auth_routes.py  ui_routes.py
submission_frontend/schemas/: schemas.py
submission_frontend/services/: firestore_service.py  gcs_service.py  vertexai_service.py
submission_frontend/static/css/: dashboard.css  login.css  marketing.css
submission_frontend/templates/: dashboard.html  login.html  marketing.html
submission_frontend/utilities/: helpers.py  policy_engine.py  workflow_engine.py
(+339 files in other folders)
