[project]
name = "submission_frontend"
version = "0.1.0"
description = "Manager Dashboard service for Ambient Expense Agent"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "google-cloud-aiplatform>=1.156.0",
    "google-cloud-storage>=2.14.0",
    "python-multipart>=0.0.9",
    "google-cloud-firestore>=2.14.0",
    "itsdangerous>=2.1.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
